ssl cert syncyng for python2.7

--- a/roles/confluent.common/tasks/debian_jvm.yml
+++ b/roles/confluent.common/tasks/debian_jvm.yml
@@ -19,7 +19,7 @@
   apt:
     name: "{{ debian_java_package_name }}"
     state: present
-    default_release: jessie-backports
+    # default_release: jessie-backports
   when: install_java|bool
 
 - name: Install rsync
