--- a/roles/confluent.kafka_broker/defaults/main.yml
+++ b/roles/confluent.kafka_broker/defaults/main.yml
@@ -21,9 +21,9 @@ kafka_broker:
   user: kafka
   group: kafka
   config_file: /etc/kafka/server.properties
-  systemd_file: /usr/lib/systemd/system/kafka.service
-  systemd_override: /etc/systemd/system/kafka.service.d
-  service_name: kafka
+  systemd_file: /usr/lib/systemd/system/confluent-kafka.service
+  systemd_override: /etc/systemd/system/confluent-kafka.service.d
+  service_name: confluent-kafka
   datadir:
     - /var/lib/kafka/data
   systemd:
