--- a/roles/confluent.zookeeper/defaults/main.yml
+++ b/roles/confluent.zookeeper/defaults/main.yml
@@ -15,9 +15,9 @@ zookeeper:
   user: kafka
   group: kafka
   config_file: /etc/kafka/zookeeper.properties
-  service_name: zookeeper
-  systemd_file: /usr/lib/systemd/system/zookeeper.service
-  systemd_override: /etc/systemd/system/zookeeper.service.d
+  service_name: confluent-zookeeper
+  systemd_file: /usr/lib/systemd/system/confluent-zookeeper.service
+  systemd_override: /etc/systemd/system/confluent-zookeeper.service.d
   keytab: /etc/security/keytabs
   properties:
     maxClientCnxns: 0
