--- a/roles/confluent.zookeeper/defaults/main.yml
+++ b/roles/confluent.zookeeper/defaults/main.yml
@@ -12,8 +12,8 @@ zookeeper_packages:
   - confluent-kafka-2.12
 
 zookeeper:
-  user: kafka
-  group: kafka
+  user: cp-kafka
+  group: confluent-kafka
   config_file: /etc/kafka/zookeeper.properties
   service_name: confluent-zookeeper
   systemd_file: /usr/lib/systemd/system/confluent-zookeeper.service
